--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="6000" id="slider-p">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="6000" id="slider-p">
     <div>
         <div>
             <div>
@@ -671,7 +671,7 @@ Phone:( +48) 882-58-53-47<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="6HwJsPjii9YcwKQzAlM35eVvYc8/grilxpwAfGf86fAEbkax8iCFzCEfMSAdsyDX3cOk3HGcGNmppqvxbbTKSRvcweHweWL7DrPfAV5nOrzzXZpuvACIEwVle3MIw0cJ" data-form-email="true">
+                    <input type="hidden" value="bTpZFCInc4Oonu8B9wHqPLroGyV4j+xnF7qhR4ScKQbjHdRsUb383HL+FdboUmB0O27I1CGrWuAuMawUQHSZTlHdQYQtByI876apD9wz/b6x0FO/GIzgahgtVLK3aSMU" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-e-email">Email<span class="form-asterisk">*</span></label>
