--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="6000" id="slider-p">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="6000" id="slider-p">
     <div>
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-p" class="" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="7"></li>
+                    <li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider-p" class="" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#slider-p" data-slide-to="7"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/zegarmistrz-2000x1334.png);">
@@ -671,7 +671,7 @@ Phone:( +48) 882-58-53-47<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="bTpZFCInc4Oonu8B9wHqPLroGyV4j+xnF7qhR4ScKQbjHdRsUb383HL+FdboUmB0O27I1CGrWuAuMawUQHSZTlHdQYQtByI876apD9wz/b6x0FO/GIzgahgtVLK3aSMU" data-form-email="true">
+                    <input type="hidden" value="DAUTSWt41q2VHE5P6+y6uotxolgnN94NBltHFWXyNlIfavK1oXGrz8AIb6pA5deRidAKHJ5cN+Yl533BTCbKy7CNk1hQElard7fyudh41Y0+2YCSZq5ddckjEloXLATz" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-e-email">Email<span class="form-asterisk">*</span></label>
